common/src/main/java/dev/ultreon/quantum/scripting/qfunc/QuantumParser.java
// Generated from QuantumParser.g4 by ANTLR 4.5
package dev.ultreon.quantum.scripting.qfunc;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QuantumParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, DIRECTIVE=2, STRING=3, IDENTIFIER=4, FLOATING_POINT=5, NUMBER=6, 
		COMMENT=7, COMMA=8, SEMICOLON=9, COLON=10, ARROW=11, STAR=12, SLASH=13, 
		PERCENT=14, ASSIGN=15, LESS_THAN=16, GREATER_THAN=17, LESS_THAN_EQUAL=18, 
		GREATER_THAN_EQUAL=19, EQUAL=20, NOT_EQUAL=21, BITWISE_AND=22, BITWISE_OR=23, 
		BITWISE_XOR=24, BITWISE_NOT=25, SHIFT_LEFT=26, SHIFT_RIGHT=27, PLUS=28, 
		MINUS=29, DOLLAR=30, AT=31, LPAREN=32, RPAREN=33, LBRACKET=34, RBRACKET=35, 
		LBRACE=36, RBRACE=37, HASH=38, NOT=39, PERSIST_DIRECTIVE=40, INPUT_DIRECTIVE=41, 
		IF=42, IS=43, ELSE=44, WHILE=45, FOR=46, LOOP=47, BREAK=48, CONTINUE=49, 
		STOP=50, RETURN=51, INPUT=52, PERSIST=53, PRESENT=54, DIRECIVE=55, AND=56, 
		OR=57, BOOLEAN=58, DOT=59;
	public static final int
		RULE_file = 0, RULE_statement = 1, RULE_expressionStatement = 2, RULE_lineComment = 3, 
		RULE_blockStatement = 4, RULE_persistStatement = 5, RULE_directiveType = 6, 
		RULE_inputStatement = 7, RULE_condition = 8, RULE_isCond = 9, RULE_assignment = 10, 
		RULE_globalName = 11, RULE_globalExpr = 12, RULE_paramName = 13, RULE_parameterExpr = 14, 
		RULE_expression = 15, RULE_group = 16, RULE_andExpr = 17, RULE_orExpr = 18, 
		RULE_negationExpr = 19, RULE_equalityExpr = 20, RULE_relationalExpr = 21, 
		RULE_bitwiseAndExpr = 22, RULE_bitwiseOrExpr = 23, RULE_bitwiseXorExpr = 24, 
		RULE_bitwiseNotExpr = 25, RULE_shiftExpr = 26, RULE_multExpr = 27, RULE_addExpr = 28, 
		RULE_primary = 29, RULE_atom = 30, RULE_globalRef = 31, RULE_namedAtom = 32, 
		RULE_variableName = 33, RULE_id = 34, RULE_funcName = 35, RULE_functionCall = 36, 
		RULE_member = 37, RULE_argumentList = 38, RULE_argumentExpr = 39, RULE_argumentName = 40, 
		RULE_namespace = 41, RULE_path = 42, RULE_stopStatement = 43, RULE_ifStatement = 44, 
		RULE_forStatement = 45, RULE_whileStatement = 46, RULE_loopStatement = 47, 
		RULE_returnStatement = 48, RULE_breakStatement = 49, RULE_continueStatement = 50;
	public static final String[] ruleNames = {
		"file", "statement", "expressionStatement", "lineComment", "blockStatement", 
		"persistStatement", "directiveType", "inputStatement", "condition", "isCond", 
		"assignment", "globalName", "globalExpr", "paramName", "parameterExpr", 
		"expression", "group", "andExpr", "orExpr", "negationExpr", "equalityExpr", 
		"relationalExpr", "bitwiseAndExpr", "bitwiseOrExpr", "bitwiseXorExpr", 
		"bitwiseNotExpr", "shiftExpr", "multExpr", "addExpr", "primary", "atom", 
		"globalRef", "namedAtom", "variableName", "id", "funcName", "functionCall", 
		"member", "argumentList", "argumentExpr", "argumentName", "namespace", 
		"path", "stopStatement", "ifStatement", "forStatement", "whileStatement", 
		"loopStatement", "returnStatement", "breakStatement", "continueStatement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, "','", "';'", "':'", "'->'", 
		"'*'", "'/'", "'%'", "'='", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
		"'&'", "'|'", "'^'", "'~'", "'<<'", "'>>'", "'+'", "'-'", "'$'", "'@'", 
		"'('", "')'", "'['", "']'", "'{'", "'}'", "'#'", "'!'", null, null, "'if'", 
		"'is'", "'else'", "'while'", "'for'", "'loop'", "'break'", "'continue'", 
		"'stop'", "'return'", null, null, "'resent'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WHITESPACE", "DIRECTIVE", "STRING", "IDENTIFIER", "FLOATING_POINT", 
		"NUMBER", "COMMENT", "COMMA", "SEMICOLON", "COLON", "ARROW", "STAR", "SLASH", 
		"PERCENT", "ASSIGN", "LESS_THAN", "GREATER_THAN", "LESS_THAN_EQUAL", "GREATER_THAN_EQUAL", 
		"EQUAL", "NOT_EQUAL", "BITWISE_AND", "BITWISE_OR", "BITWISE_XOR", "BITWISE_NOT", 
		"SHIFT_LEFT", "SHIFT_RIGHT", "PLUS", "MINUS", "DOLLAR", "AT", "LPAREN", 
		"RPAREN", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "HASH", "NOT", "PERSIST_DIRECTIVE", 
		"INPUT_DIRECTIVE", "IF", "IS", "ELSE", "WHILE", "FOR", "LOOP", "BREAK", 
		"CONTINUE", "STOP", "RETURN", "INPUT", "PERSIST", "PRESENT", "DIRECIVE", 
		"AND", "OR", "BOOLEAN", "DOT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QuantumParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QuantumParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuantumParserVisitor ) return ((QuantumParserVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << IDENTIFIER) | (1L << FLOATING_POINT) | (1L << NUMBER) | (1L << COMMENT) | (1L << BITWISE_NOT) | (1L << DOLLAR) | (1L << AT) | (1L << LPAREN) | (1L << LBRACKET) | (1L << HASH) | (1L << NOT) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << LOOP) | (1L << BREAK) | (1L << CONTINUE) | (1L << STOP) | (1L << RETURN) | (1L << PRESENT) | (1L << BOOLEAN))) != 0)) {
				{
				{
				setState(102);
				statement();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public LineCommentContext lineComment() {
			return getRuleContext(LineCommentContext.class,0);
		}
		public PersistStatementContext persistStatement() {
			return getRuleContext(PersistStatementContext.class,0);
		}
		public InputStatementContext inputStatement() {
			return getRuleContext(InputStatementContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public StopStatementContext stopStatement() {
			return getRuleContext(StopStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public LoopStatementContext loopStatement() {
			return getRuleContext(LoopStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuantumParserVisitor ) return ((QuantumParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(108);
				lineComment();
				}
				break;
			case 2:
				{
				setState(109);
				persistStatement();
				}
				break;
			case 3:
				{
				setState(110);
				inputStatement();
				}
				break;
			case 4:
				{
				setState(111);
				assignment();
				}
				break;
			case 5:
				{
				setState(112);
				functionCall();
				}
				break;
			case 6:
				{
				setState(113);
				stopStatement();
				}
				break;
			case 7:
				{
				setState(114);
				ifStatement();
				}
				break;
			case 8:
				{
				setState(115);
				forStatement();
				}
				break;
			case 9:
				{
				setState(116);
				whileStatement();
				}
				break;
			case 10:
				{
				setState(117);
				loopStatement();
				}
				break;
			case 11:
				{
				setState(118);
				returnStatement();
				}
				break;
			case 12:
				{
				setState(119);
				breakStatement();
				}
				break;
			case 13:
				{
				setState(120);
				continueStatement();
				}
				break;
			case 14:
				{
				setState(121);
				expressionStatement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionStatementContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(QuantumParser.SEMICOLON, 0); }
		public ExpressionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).enterExpressionStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).exitExpressionStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuantumParserVisitor ) return ((QuantumParserVisitor<? extends T>)visitor).visitExpressionStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionStatementContext expressionStatement() throws RecognitionException {
		ExpressionStatementContext _localctx = new ExpressionStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expressionStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			expression();
			setState(125);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineCommentContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(QuantumParser.COMMENT, 0); }
		public LineCommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineComment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).enterLineComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).exitLineComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuantumParserVisitor ) return ((QuantumParserVisitor<? extends T>)visitor).visitLineComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineCommentContext lineComment() throws RecognitionException {
		LineCommentContext _localctx = new LineCommentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lineComment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockStatementContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(QuantumParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(QuantumParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).enterBlockStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).exitBlockStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuantumParserVisitor ) return ((QuantumParserVisitor<? extends T>)visitor).visitBlockStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockStatementContext blockStatement() throws RecognitionException {
		BlockStatementContext _localctx = new BlockStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_blockStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(LBRACE);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << IDENTIFIER) | (1L << FLOATING_POINT) | (1L << NUMBER) | (1L << COMMENT) | (1L << BITWISE_NOT) | (1L << DOLLAR) | (1L << AT) | (1L << LPAREN) | (1L << LBRACKET) | (1L << HASH) | (1L << NOT) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << LOOP) | (1L << BREAK) | (1L << CONTINUE) | (1L << STOP) | (1L << RETURN) | (1L << PRESENT) | (1L << BOOLEAN))) != 0)) {
				{
				{
				setState(130);
				statement();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PersistStatementContext extends ParserRuleContext {
		public TerminalNode HASH() { return getToken(QuantumParser.HASH, 0); }
		public TerminalNode PERSIST() { return getToken(QuantumParser.PERSIST, 0); }
		public DirectiveTypeContext directiveType() {
			return getRuleContext(DirectiveTypeContext.class,0);
		}
		public List<GlobalNameContext> globalName() {
			return getRuleContexts(GlobalNameContext.class);
		}
		public GlobalNameContext globalName(int i) {
			return getRuleContext(GlobalNameContext.class,i);
		}
		public PersistStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_persistStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).enterPersistStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).exitPersistStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuantumParserVisitor ) return ((QuantumParserVisitor<? extends T>)visitor).visitPersistStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PersistStatementContext persistStatement() throws RecognitionException {
		PersistStatementContext _localctx = new PersistStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_persistStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(HASH);
			setState(139);
			match(PERSIST);
			setState(140);
			directiveType();
			setState(141);
			globalName();
			setState(145);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(142);
					globalName();
					}
					} 
				}
				setState(147);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectiveTypeContext extends ParserRuleContext {
		public TerminalNode LESS_THAN() { return getToken(QuantumParser.LESS_THAN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(QuantumParser.IDENTIFIER, 0); }
		public TerminalNode GREATER_THAN() { return getToken(QuantumParser.GREATER_THAN, 0); }
		public DirectiveTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directiveType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).enterDirectiveType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).exitDirectiveType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuantumParserVisitor ) return ((QuantumParserVisitor<? extends T>)visitor).visitDirectiveType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectiveTypeContext directiveType() throws RecognitionException {
		DirectiveTypeContext _localctx = new DirectiveTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_directiveType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(LESS_THAN);
			setState(149);
			match(IDENTIFIER);
			setState(150);
			match(GREATER_THAN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputStatementContext extends ParserRuleContext {
		public TerminalNode HASH() { return getToken(QuantumParser.HASH, 0); }
		public TerminalNode INPUT() { return getToken(QuantumParser.INPUT, 0); }
		public List<GlobalNameContext> globalName() {
			return getRuleContexts(GlobalNameContext.class);
		}
		public GlobalNameContext globalName(int i) {
			return getRuleContext(GlobalNameContext.class,i);
		}
		public InputStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).enterInputStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).exitInputStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuantumParserVisitor ) return ((QuantumParserVisitor<? extends T>)visitor).visitInputStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputStatementContext inputStatement() throws RecognitionException {
		InputStatementContext _localctx = new InputStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_inputStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(HASH);
			setState(153);
			match(INPUT);
			setState(154);
			globalName();
			setState(158);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(155);
					globalName();
					}
					} 
				}
				setState(160);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public IsCondContext isCond() {
			return getRuleContext(IsCondContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).exitCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuantumParserVisitor ) return ((QuantumParserVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_condition);
		try {
			setState(163);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				isCond();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IsCondContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode IS() { return getToken(QuantumParser.IS, 0); }
		public IsCondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_isCond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).enterIsCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).exitIsCond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuantumParserVisitor ) return ((QuantumParserVisitor<? extends T>)visitor).visitIsCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IsCondContext isCond() throws RecognitionException {
		IsCondContext _localctx = new IsCondContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_isCond);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			expression();
			setState(166);
			match(IS);
			setState(167);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public GlobalExprContext globalExpr() {
			return getRuleContext(GlobalExprContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(QuantumParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(QuantumParser.SEMICOLON, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuantumParserListener ) ((QuantumParserListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuantumParserVisitor ) return ((QuantumParserVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			globalExpr();
			setState(170);
			match(ASSIGN);
			setState(171);
			expression();
			setState(172);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
